--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ autoNumber: "AMS"
   </div>
 
   <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
+<!--    Written on {{ page.date | date: "%B %e, %Y" }}-->
   </div>
 
   {% include disqus.html %}
