--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/hire/">Consulting / Hire Me</a>
-            <a href="{{ site.baseurl }}/archive/">Archive</a>
+            <a href="{{ site.baseurl }}/archive/index/">Archive</a>
           </nav>
         </header>
       </div>
