--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -138,3 +138,6 @@ div.highlight code {
 .highlight .no {
   color: #6f42c1 !important;   /* saturated purple */
 }
+.highlight {
+  overflow: hidden;
+}
